<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlowfishFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/blowfish_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_format_align_center_24"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/user_text_layout"
            android:hint="@string/plain_text"
            >
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/blowfish_key_word_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/blowfish_text_layout"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blowfish_key_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/playfair_key_word_layout"
            android:hint="@string/transposition_key_word"
            >
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/blowfish_key_word_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/encode_btn"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/playfair_key_word_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/encode"
            android:layout_marginHorizontal="8dp"

            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_baseline_lock_24"
            >
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/decode_btn"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/encode_btn"
            app:layout_constraintStart_toEndOf="@+id/encode_btn"
            android:text="@string/decode"
            android:layout_marginHorizontal="8dp"

            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_baseline_lock_open_24"
            >

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

    <TextView
        android:id="@+id/blowfish_result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttons_layout"
        android:text="@string/blowfish_result"
        android:layout_marginHorizontal="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>