<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainHubFragment">



    <com.google.android.material.button.MaterialButton
        android:id="@+id/redirect_to_classic_cipheres_btn"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/redirect_to_classic_cipheres"
        android:layout_marginHorizontal="8dp"

        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_baseline_lock_open_24"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/redirect_to_blowfish_btn"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/redirect_to_classic_cipheres_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/redirect_to_blowfish"
        android:layout_marginHorizontal="8dp"

        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_baseline_lock_open_24"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/redirect_to_rsa_btn"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/redirect_to_blowfish_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/redirect_to_rsa"
        android:layout_marginHorizontal="8dp"

        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_baseline_lock_open_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>